--- a/Super-Mario-Bros/Super-Mario-Bros/Properties/Resources.resx
+++ b/Super-Mario-Bros/Super-Mario-Bros/Properties/Resources.resx
@@ -139,9 +139,6 @@
   <data name="Mario" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Mario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="MarioBros3Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MarioBros3Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="MetalPlatforms5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MetalPlatforms5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -160,10 +157,10 @@
   <data name="overworld_bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\overworld_bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Super_Mario_Bros_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Super-Mario-Bros-3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Tube" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SuperMarioBros" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Super-Mario-Bros-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
