--- a/Super-Mario-Bros/Super-Mario-Bros/Properties/Resources.resx
+++ b/Super-Mario-Bros/Super-Mario-Bros/Properties/Resources.resx
@@ -163,4 +163,7 @@
   <data name="SuperMarioBros" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Super-Mario-Bros-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HighScore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HIghScore.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
