Where are you, Login? :(

--- a/Super-Mario-Bros/Super-Mario-Bros/Sounds.resx
+++ b/Super-Mario-Bros/Super-Mario-Bros/Sounds.resx
@@ -117,12 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Battle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Battle.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Coin" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAPKbAADymwAAAAEAAQoPAgAAAPKbAAACUklGRuqbAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAA8psAAPKbAADymwAAAAEAAQoPAgAAAPKbAAACUklGRuqbAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhmpsAAAMA/P8DAP7/AgD+/wIA/v8CAP7/AgD+/wIA/v8CAP////8CAP7/AgD+/wIA/f8EAPz/BAD8
         /wMA/v8BAP//AgD+/wIA/f8DAP3/BAD8/wMA/v8BAAAA//8CAP3/AwD+/wEAAAD//wEAAAD//wIA/v8B
@@ -796,7 +800,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAOSkAADkpAAAAAEAAQoPAgAAAOSkAAACUklGRtykAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAA5KQAAOSkAADkpAAAAAEAAQoPAgAAAOSkAAACUklGRtykAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhjKQAAAIA/f8EAPz/AwD//wAA//8DAPv/BgD8/wAAAwD8/wMA/v8CAP7/AgD+/wAAAgD+/wIA/v8B
         AP//AgD+/wIA/v8BAP//AgD+/wIA/v8BAAAAAAAAAAAAAAAAAAAA//8CAP7/AgD/////AgD+/wIA//8A
@@ -1508,7 +1512,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAIx3AACMdwAAAAEAAQoPAgAAAIx3AAACUklGRoR3AABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAjHcAAIx3AACMdwAAAAEAAQoPAgAAAIx3AAACUklGRoR3AABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhNHcAAP3/AgAAAP7/AwD9/wMA/f8CAP//AAABAP//AQD//wEA/v8DAP7/AQAAAP//AQD//wIA/f8E
         APz/AwD9/wMA/f8EAPv/BQD7/wQA/f8CAP//AQD//wEA/v8DAPz/BQD7/wQA/f8CAP//AQD//wAAAQD+
@@ -2026,7 +2030,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAABAuAAAQLgAAAAEAAQoPAgAAABAuAAACUklGRgguAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAEC4AABAuAAAQLgAAAAEAAQoPAgAAABAuAAACUklGRgguAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhuC0AAAUA/P8DAP3/AwD+/wAAAgD9/wMA/f8CAAAA//8CAP3/AgD//wEAAAD//wEA//8BAP//AQD/
         /wIA/v8AAAEA//8BAP//AQD//wEA/v8DAP3/AwD9/wIA//8BAP//AQD//wEA/v8DAP7/AAABAP7/AgD/
@@ -2231,7 +2235,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAHgwAgB4MAIAAAEAAQoPAgAAAHgwAgACUklGRnAwAgBXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAeDACAHgwAgB4MAIAAAEAAQoPAgAAAHgwAgACUklGRnAwAgBXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhIDACAP//AAAAAAAAAQD+/wIA/v8BAAEA/v8CAP7/AQAAAAAAAAABAP3/BAD8/wQA/f8CAP7/AgD/
         /wAAAQD+/wMA/f8DAPz/BAD9/wMA/f8BAAAAAQD+/wMA/P8DAP//AAABAP//AAAAAAEA/v8DAPz/BAD9
@@ -4630,7 +4634,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAABwzAgAcMwIAAAEAAQoPAgAAABwzAgACUklGRhQzAgBXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAHDMCABwzAgAcMwIAAAEAAQoPAgAAABwzAgACUklGRhQzAgBXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhxDICAAEAAAD//wIA/v8BAAEA/v8CAP////8CAP//AQD/////AgD+/wIA/////wIA/v8BAAEA/v8C
         AP7/AgD//wAAAAAAAAAAAAAAAAAAAAD//wIA/f8EAP3/AQAAAP//AQAAAAAAAAD//wEAAAD//wMA+/8F
@@ -7041,7 +7045,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAFiSAABYkgAAAAEAAQoPAgAAAFiSAAACUklGRlCSAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAWJIAAFiSAABYkgAAAAEAAQoPAgAAAFiSAAACUklGRlCSAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhAJIAAAAA//8CAP7/AgD+/wIA/v8CAP//AAAAAAAAAAABAP7/AgD+/wIA//8AAAAAAQD+/wIA////
         /wIA/v8CAP7/AgD9/wQA/f8CAP7/AQABAP//AAAAAAAAAAAAAAEA/f8FAPr/BgD6/wYA+/8DAP//AAAA
@@ -7674,7 +7678,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAIZ0AACGdAAAAAEAAQoPAgAAAIZ0AAACUklGRn50AABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAhnQAAIZ0AACGdAAAAAEAAQoPAgAAAIZ0AAACUklGRn50AABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhLnQAAAIA/v8CAP3/AwD/////AgD+/wIA/v8CAP7/AgD+/wIA/v8DAPz/BAD8/wQA/P8EAPz/AwD/
         ////AQAAAP//AgD+/wEA//8BAAAA//8CAPz/BQD8/wMA/v8AAAEAAAD//wEA//8AAAEA//8AAAEA/v8C
@@ -8179,7 +8183,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAANqGAADahgAAAAEAAQoPAgAAANqGAAACUklGRtKGAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAA2oYAANqGAADahgAAAAEAAQoPAgAAANqGAAACUklGRtKGAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhgoYAAAEA//8AAAEA/v8DAP3/AwD8/wUA+/8FAPz/AgD//wEAAAD+/wMA/f8DAP7/AQD//wEAAAAA
         AAAAAAAAAAAAAAABAP7/AgD//wAAAQD//wAAAQD//wAAAQD+/wIA/v8DAPz/BAD8/wMA//8AAAAAAAD/
@@ -8763,7 +8767,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAOygAADsoAAAAAEAAQoPAgAAAOygAAACUklGRuSgAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAA7KAAAOygAADsoAAAAAEAAQoPAgAAAOygAAACUklGRuSgAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhlKAAAAIA//8AAAEA//8AAAEA//8AAAIA/f8EAPv/BAD+/wIA/v8BAP//AgD+/wIA/f8EAPz/BAD8
         /wMA/v8BAP//AQAAAP//AQD+/wIAAAD//wEA/v8CAP//AAABAP//AAAAAAEA/v8EAPr/BgD7/wMAAAD+
@@ -9458,7 +9462,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAAFjsAQBY7AEAAAEAAQoPAgAAAFjsAQACUklGRlDsAQBXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAWOwBAFjsAQBY7AEAAAEAAQoPAgAAAFjsAQACUklGRlDsAQBXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhAOwBAAAA//8BAAAA/v8DAP7/AQAAAP//AQD//wIA/v8BAAAA//8BAAAA//8BAP//AAACAP3/AwD+
         /wAAAgD9/wMA/v8BAP//AQD//wEA//8BAP7/AgD//wEAAAD+/wIA//8BAP//AQD//wEA//8BAP//AQD/
@@ -11567,7 +11571,7 @@
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
         cmlnaW4JX3Bvc2l0aW9uB19sZW5ndGgJX2NhcGFjaXR5C19leHBhbmRhYmxlCV93cml0YWJsZQpfZXhw
         b3NhYmxlB19pc09wZW4dTWFyc2hhbEJ5UmVmT2JqZWN0K19faWRlbnRpdHkHAAAAAAAAAAACAggICAgB
-        AQEBCQIAAAAAAAAAAAAAABAuAAAQLgAAAAEAAQoPAgAAABAuAAACUklGRgguAABXQVZFZm10IBAAAAAB
+        AQEBCQIAAAAAAAAAEC4AABAuAAAQLgAAAAEAAQoPAgAAABAuAAACUklGRgguAABXQVZFZm10IBAAAAAB
         AAEAIlYAAESsAAACABAATElTVCQAAABJTkZPSUNNVBgAAABUaGVNdXNocm9vbUtpbmdkb20ubmV0AABk
         YXRhuC0AAAEA//8AAAEA//8AAAIA/P8FAPv/BAD+/wAAAQAAAP//AgD9/wMA/v8BAAAA//8BAAAA//8C
         AP7/AQAAAP//AQAAAAAAAAD//wAAAQD//wEA//8BAP//AQD+/wMA/v8BAP//AQD//wEA//8CAP3/AwD9
