--- a/Super-Mario-Bros/Super-Mario-Bros/Sounds.resx
+++ b/Super-Mario-Bros/Super-Mario-Bros/Sounds.resx
@@ -121,6 +121,9 @@
   <data name="Battle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Battle.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Button.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Coin" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAEAQAAABZTeXN0ZW0uSU8uTWVtb3J5U3RyZWFtCgAAAAdfYnVmZmVyB19v
